[package]
name = "roonsim"
version = "0.1.0"
edition = "2024"


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.16.1", default-features = false, features = ["bevy_asset", "bevy_color", "bevy_gilrs", "bevy_log", "bevy_render", "bevy_sprite", "bevy_state", "bevy_text", "bevy_ui", "bevy_window", "bevy_winit", "custom_cursor", "png", "wav", "webgl2"] }
winit = { version = "0.30.11", default-features = false, features = ["x11"] }
